name:                zorya
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jamesdabbs/zorya
license:             BSD3
license-file:        LICENSE
author:              James Dabbs
maintainer:          jamesdabbs@gmail.com
copyright:           2015 James Dabbs
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  exposed-modules:     Bot
                     , Types
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , amqp
                     , attoparsec
                     , bytestring
                     , HsOpenSSL
                     , io-streams
                     , lens
                     , lens-aeson
                     , mtl
                     , network
                     , network-uri
                     , openssl-streams
                     , text
                     , transformers
                     , websockets
                     , wreq
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , RecordWildCards

executable zorya
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , zorya
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                     , RecordWildCards


test-suite zorya-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zorya
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamesdabbs/zorya
